feat: adding some components elements: auth anchor, checkbox, input text, label, long rounded button fragments: textbox, signature (fixed) layout: form login (mobile only) pages: login (on-process)

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,7 @@
   font-family: 'montserratSemiBold';
   src: url('./assets/fonts/Montserrat-SemiBold.ttf');
 }
+
+#checkbox-1:checked ~ .check-1 {
+  display: block;
+}
