feat: styling input file components

--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,7 @@
 .small-shadow {
   box-shadow: 0 0 5px 0.1px rgba(0, 0, 0, 0.1);
 }
+
+.input-file:hover > label svg > path {
+  @apply stroke-primary
+}
