--- a/src/index.css
+++ b/src/index.css
@@ -37,5 +37,9 @@
 }
 
 .input-file:hover > label svg > path {
-  @apply stroke-primary
+  @apply stroke-primary;
+}
+
+.button-hover:hover + div {
+  @apply opacity-15;
 }
