--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@
   box-shadow: 0 0 5px 0.1px rgba(0, 0, 0, 0.1);
 }
 
+.spread-shadow {
+  box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.1);
+}
+
 .input-file:hover > label svg > path {
   @apply stroke-primary;
 }
